<resources>
    <string name="app_name">Ecommerce</string>
    <string name="facebook_id">968050263958529</string>
    <string name="language_english">en</string>
    <string name="language_hindi">ar</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="skip_continue"><![CDATA[Skip & Continue]]></string>
    <string name="login">Login</string>
    <string name="you_stay_home_we_are_always_here">You stay home we are always here</string>
    <string name="signup">Signup</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sepratetext">-- OR --</string>
    <string name="forget_info_text">Enter your registered email address below.We will send new password in your email.</string>
    <string name="submit">Submit</string>
    <string name="forget_password">Forgot Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="create_account">Create account</string>
    <string name="sign_up_to_get_started">Signup to get started!</string>
    <string name="full_name">Full name</string>
    <string name="mobile">Mobile</string>
    <string name="refrrel_code_optional">Referral  code (Optional)</string>
    <string name="i_accept_the_terms_and_condition"><![CDATA[I accept the terms & conditions]]></string>
    <string name="no_internet">No internet connection.\n Go to device settings and connect to network</string>
    <string name="okay">Okay</string>
    <string name="logout">Logout</string>
    <string name="font_regular">fonts/Poppins-Regular.ttf</string>
    <string name="validation_all">Please enter all details</string>
    <string name="select_your_address">Please select your address</string>
    <string name="terms_condition_error">Please accept our terms and conditions</string>
    <string name="validation_valid_email">Please enter valid email</string>
    <string name="error_msg">Please try again. Something went wrong</string>
    <string name="error_cart">First empty your Cart, Then add new product in Cart</string>
    <string name="otp_verifiy">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter OTP below and proceed further.</string>
    <string name="don_t_receive_the_otp">Don’t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="validation_otp">Please enter OTP</string>
    <string name="otp_verification"><![CDATA[Verify & Proceed]]></string>
    <string name="enter_otp">Enter OTP here</string>
    <string name="my_addresses">My Addresses</string>
    <string name="owner"><![CDATA[\@Gravityinfotech]]></string>
    <string name="no_data_found">No data found</string>
    <string name="add_address">Add Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street_address">Street Address</string>
    <string name="landmark">Landmark</string>
    <string name="postcode_zip">Postcode / Zip</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="email_address">Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="myaddress">My Address</string>
    <string name="change_layout">Change Layout</string>
    <string name="help_contact_us"><![CDATA[Help & Contact Us]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_account">My Account</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_cart">My Cart</string>
    <string name="size">Size: S</string>
    <string name="checkout">Checkout</string>
    <string name="view_all">View All</string>
    <string name="have_a_coupon_click_here_to_enter_your_code">Have a coupon? Click here to enter your code</string>
    <string name="if_you_have_a_coupon_code_please_apply_it_below">If you have a coupon code, please apply it below.</string>
    <string name="apply">Apply</string>
    <string name="remove">Remove</string>
    <string name="billing_shiping_address">Billing / Shiping address</string>
    <string name="select_address">Select Address</string>
    <string name="order_note">Order Note</string>
    <string name="note">Note</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="tax">Tax</string>
    <string name="subtotal">Subtotal</string>
    <string name="order_info">Order Info</string>
    <string name="procced_to_payment">Procced to Payment</string>
    <string name="my_whishlist">My WhishList</string>
    <string name="infotech_gravity">Infotech Gravity</string>
    <string name="computer_accessories_gaming_pc_gaming_motherboard"><![CDATA[Computer & Accessories | Gaming Pc | Gaming Motherboard]]></string>
    <string name="_1_00_additional_tax">$ 1.00 Additional Tax</string>
    <string name="sku">SKU :</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="visit_store">Visit Store</string>
    <string name="you_may_also_like">You May also like</string>
    <string name="write_review">Write Review</string>
    <string name="write_your_review">Write your review</string>
    <string name="reviews">Reviews</string>
    <string name="based_on_2_ratings_n_reviews">Based on 2 Ratings <br> </br><![CDATA[ & Reviews]]></string>
    <string name="awesome">Awesome !</string>
    <string name="about">About</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="categories">Categories</string>
    <string name="view_alll">View all</string>
    <string name="featured_product">Featured Products</string>
    <string name="vendors">Vendors</string>
    <string name="brand">Brand</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="all_categories">All Categories</string>
    <string name="men_clothing_fashion"><![CDATA[Men Clothing & Fashion]]></string>
    <string name="search">Search</string>
    <string name="my_order_list">My Order List</string>
    <string name="order_id">Order ID:</string>
    <string name="payment_type">Payment Type:</string>
    <string name="cash">Cash</string>
    <string name="order_details">Order Details</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="track_order">Track Order</string>
    <string name="validation_valid_cpassword">Password and confirm password must be same.</string>
    <string name="validation_valid_password">Please enter must be minimum eight character.</string>
    <string name="validation_password">Please enter password.</string>
    <string name="validation_oldpassword">Please enter old password.</string>
    <string name="validation_cpassword">Please enter confirm password.</string>
    <string name="skip">Skip</string>
    <string name="start_">Start</string>
    <string name="log_out">Log Out</string>
    <string name="logout_text">Are you sure you want to logout from this app?</string>
    <string name="ltr">LTR</string>
    <string name="rtl">RTL</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings</string>
    <string name="phone_number">Phone Number</string>
    <string name="delete_address_alert">Are you sure to delete this address?</string>
    <string name="item_add_to_cart">Item Added to cart</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="exit_screen">Are you sure to exit from this app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_address">Save address</string>
    <string name="update_address">Update address</string>
    <string name="edit_address">Edit Address</string>
    <string name="new_address">New Address</string>
    <string name="offers">Offers</string>
    <string name="in_stock">In-Stock</string>
    <string name="outofstock">Out - Stock</string>
    <string name="est_shipping_time">EST. Shipping Time : </string>
    <string name="shopping_charge">Shipping Charge : </string>
    <string name="description">Description</string>
    <string name="all_brands">All Brands</string>
    <string name="all_store">All Store</string>
    <string name="notifications">Notifications</string>
    <string name="order_7a23a4a66ahafg_has_been_placed">Order 7A23A4A66AHAFG has been placed </string>
    <string name="qty">Qty:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="add_review">Add Review</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="confirmed">Confirmed</string>
    <string name="order_placed">Order Placed</string>
    <string name="you_order_has_been_confirmed">You Order has been confirmed</string>
    <string name="you_order_has_been_rejected">You Order has been rejected</string>
    <string name="order_shipped">Order Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="your_order_has_been_delivered">Your order has been delivered</string>
    <string name="your_package_off_for_delivery">Your package off for delivery</string>
    <string name="your_package_off_for_completed">Your package off for completed</string>
    <string name="_10_00">$10.00</string>
    <string name="man_t_shirts">Man t-shirts</string>
    <string name="_5_day">5 Day</string>
    <string name="_500_00">$500.00</string>
    <string name="_123456789">123456789</string>
    <string name="fabric">Fabric</string>
    <string name="man_t_shirt">Man t-shirt</string>
    <string name="provacy_policy">Provacy policy</string>
    <string name="help_amp_contact_us"><![CDATA[Help & Contact Us]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="inquiry_form">Quick Contact Us</string>
    <string name="message_text">Message</string>
    <string name="return_policy">Return policy</string>
    <string name="return_policies">Return policies</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="delete_item_alert">Are you sure you want to delete item?</string>
    <string name="max_qty">You\'ve reached the maximum units allowed for the purchase of this item</string>
    <string name="qty_1">Qty: 1</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="_03_august_2021">03 August 2021</string>
    <string name="hardik_sardhara">Hardik Sardhara</string>
    <string name="surat_309050">Surat - 309050</string>
    <string name="_6598741452">6598741452</string>
    <string name="test_yopmail_com">test@yopmail.com</string>
    <string name="_820_00">$ 820.00</string>
    <string name="_0_00">$ 0.00</string>
    <string name="payment_method">Payment Method</string>
    <string name="cod_payment">COD Payment</string>
    <string name="card_information">Card Information</string>
    <string name="card_number">Card number</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="cvv">CVV</string>
    <string name="wallet">Wallet</string>
    <string name="otp_description">Check your email for OTP. Enter OTP below and proceed further.</string>
</resources>