<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/app_bg" />

    <LinearLayout
        android:id="@+id/rlForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/otp_verifiy"
            android:textAppearance="@style/PoppinsBold"
            android:textColor="@color/Blackcolor"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:gravity="center_horizontal"
            android:text="@string/otp_description"
            android:textAppearance="@style/PoppinsRegular"
            android:textColor="@color/Blackcolor"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/edOTP"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/bg_white_10"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_otp"
            android:inputType="phone"
            android:maxLength="6"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textAppearance="@style/PoppinsRegular"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/resend_otp"
            android:textColor="@color/Blackcolor"
            android:textSize="@dimen/_9ssp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="@string/don_t_receive_the_otp"
                android:textAppearance="@style/PoppinsRegular"
                android:textColor="@color/Blackcolor"
                android:textSize="@dimen/_10ssp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvResendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/resend_otp"
            android:layout_marginTop="3dp"
            android:textAppearance="@style/PoppinsBold"
            android:textColor="@color/Blackcolor"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvCheckout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/otp_verification"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>


</RelativeLayout>