<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
             android:textAppearance="@style/PoppinsSemiBold"
                android:textColor="@color/Blackcolor"
                android:textSize="@dimen/_18ssp"
                 />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="viewStart"
             android:textAppearance="@style/PoppinsSemiBold"
                android:textColor="@color/Blackcolor"
                android:textSize="@dimen/_16ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/please_login_to_your_account"
                android:textAlignment="viewStart"
                android:textAppearance="@style/PoppinsRegular"
                android:textColor="@color/Blackcolor"
                android:textSize="@dimen/_11ssp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="30dp"
                android:background="@drawable/white_rect"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:textAppearance="@style/PoppinsRegular"
                android:textAlignment="viewStart"
                android:textColor="@color/Blackcolor"
                android:textColorHint="@color/medium_gray"
                android:textSize="@dimen/_11ssp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginTop="@dimen/_12sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#263238">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/white_rect"
                    android:hint="@string/password"
                    android:textAppearance="@style/PoppinsRegular"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/Blackcolor"
                    android:textColorHint="@color/medium_gray"
                    android:textSize="@dimen/_11ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textAppearance="@style/PoppinsSemiBold"
                android:textColor="@color/Blackcolor"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/ClickableView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_blue_bg_8"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textAppearance="@style/PoppinsSemiBold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/sepratetext"
                android:textAppearance="@style/PoppinsMedium"
                android:textColor="@color/Blackcolor"
                android:textSize="@dimen/_12ssp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAlignment="viewStart">


                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/googleSignUp"
                    style="@style/ClickableView"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/white_rect"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/facebookSignUp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/facebookSignUp"
                    style="@style/ClickableView"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/white_rect"
                    android:src="@drawable/ic_facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/googleSignUp"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/skip_continue"
                android:textAppearance="@style/PoppinsMedium"
                android:textColor="@color/Blackcolor"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/don_t_have_an_account"
            android:textAppearance="@style/PoppinsLight"
            android:textColor="@color/Blackcolor"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/signup"
         android:textAppearance="@style/PoppinsSemiBold"
            android:textColor="@color/Blackcolor"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>